--- a/src/main/resources/templates/user/loginForm.html
+++ b/src/main/resources/templates/user/loginForm.html
@@ -30,7 +30,7 @@
                             <input type="password" name="password" id="password" class="form-control" placeholder="비밀번호를 입력해주세요">
                         </div>
 
-                        <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
+                        <p th:if="${loginErrorMessage}" class="error" th:text="${loginErrorMessage}"></p>
                         <button class="btn btn-primary">로그인</button>
 
                         <button type="button" class="btn btn-primary col-6" onClick="location.href='/users/signUp'">회원가입</button>
